--- a/assets/style.css
+++ b/assets/style.css
@@ -1,19 +1,64 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 :root {
-  background-color: orange;
+  background-color: whitesmoke;
+}
+
+header nav {
+  margin-right: 50px;
+  float: right;
+  display: inline;
+}
+
+header h3 {
+  display: inline-block;
+  color: rgb(26, 114, 117);
+  margin-left: 30px;
 }
 
 .container {
-  margin: auto;
+  margin: 60px 10px;
   width: 100%;
   height: 100px;
   text-align: center;
+  background-color: orange;
 }
 
 button {
-  padding: 10px;
-  margin: 24px;
-  cursor: pointer;
-  font-size: 24px;
-  background-color: #247ba0;
+  display: list-item;
+  font-family: sans-serif;
+  background-color: rgb(26, 114, 117);
+  border-radius: 10px;
+  border: 3px double #cccccc;
   color: white;
+  text-align: left;
+  font-size: 15px;
+  padding: 10px;
+  width: 200px;
+  margin-top: 3px;
+}
+
+button:hover {
+  box-shadow: 4px 3px 6px #770b5c;
+}
+
+#start {
+  text-align: center;
+  display: inline-block;
+}
+
+#submitScore {
+  display: inline-block;
+}
+
+#goBack {
+  display: inline-block;
+}
+
+#clearScore {
+  display: inline-block;
 }
